--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ensolvers TODO application</title>
-    <link rel="stylesheet" href="./src/styles.css">
+    <link rel="stylesheet" href="./src/styles/styles.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/components/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
      </body>
 </html>
